--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<title>ENP_2</title>
+<title>Europeana Newspapers: Final Report</title>
 <link rel="stylesheet" type="text/css" href="assets/IDRViewer.css">
 <script type="text/javascript">
 var isIE = false;
