--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <title>Europeana Newspapers: Final Report</title>
-<link rel="stylesheet" type="text/css" href="assets/IDRViewer.css">
+<link rel="stylesheet" type="text/css" href="assets/css/IDRViewer.css">
 <script type="text/javascript">
 var isIE = false;
 function idrLoad() {
@@ -13,12 +13,12 @@ function idrLoad() {
 	IDRViewer.makeNavBar(4,'.jpg', bounds, false);
 }
 </script>
-<script src="assets/IDRViewer.js" type="text/javascript"></script>
-<script src="assets/jquery-1.11.2.min.js" type="text/javascript"></script>
+<script src="assets/js/IDRViewer.js" type="text/javascript"></script>
+<script src="assets/js/jquery-1.11.3.min.js" type="text/javascript"></script>
 </head>
 
 <!-- Background pattern courtesy of http://subtlepatterns.com/grey-washed-wall/ -->
-<body style="background:url('assets/bg.png') repeat scroll 0 0 transparent;"><div id="left">
+<body style="background:url('assets/img/bg.png') repeat scroll 0 0 transparent;"><div id="left">
 <div id="leftNav">
 	<div id="btnThumbnails" onclick="IDRViewer.toggleOutlines(false)" title="Thumbnails" class="navBtn inactive"></div>
 	<div id="btnOutlines" onclick="IDRViewer.toggleOutlines(true)" title="Bookmarks" class="navBtn inactive"></div>
