--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <title>Europeana Newspapers: Final Report</title>
-<link rel="stylesheet" type="text/css" href="assets/css/IDRViewer.css">
+<link rel="stylesheet" type="text/css" href="assets/css/Viewer.css">
 <script type="text/javascript">
 var isIE = false;
 function idrLoad() {
